src/z80asm/z80asm2/t/20-preproc/expected/binary_11.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/binary_11.asm
Assembling t/20-preproc/input/binary_11.asm...
t/20-preproc/input/binary_11.asm:1:8: error: Expected filename after BINARY
    #binary ; no input file
           ^
